<?xml version="1.0" encoding="utf-8"?>
<resources>

    -- screen main
    <string name="principal_pais">Brazil</string>
    <string name="principal_categoria">Special</string>
    <string name="principal_dia_singular">Day</string>
    <string name="principal_dia_plural">Days</string>
    <string name="principal_titulo">TRAVELLING</string>

    -- screen resumo do pacote
    <string name="resumoPacote_dias">Days</string>
    <string name="resumoPacote_preco">Final price:</string>
    <string name="resumoPacote_local">Minas</string>
    <string name="resumo_pacote_titulo">RESUME</string>
    <string name="resumo_pacote_comprar">BUY</string>
    <string name="resumo_pacote_data_separador">-</string>
    <string name="resumo_pacote_data_prefix_volta">til</string>
    <string name="resumo_pacote_data_prefix_ano">from</string>
    <string name="resumoPacote_titulo">RESUME</string>

    -- screen pagamento
    <string name="pagamento_numero_cartao">Card Number</string>
    <string name="pagamento_ano">YY</string>
    <string name="pagamento_mes">MM</string>
    <string name="pagamento_cod">CVV</string>
    <string name="pagamento_nome">Name in Card</string>
    <string name="pagamento_descricao">Enter Credit Card Details</string>
    <string name="pagamento_title_valor_pagamento">Total Price</string>
    <string name="pagamento_finalizar_botao">Pay</string>
    <string name="pagamento_titulo">PAYMENT</string>
    <string name="pagamento_digitos_nome"> ABCDEFGHIJQLMNOPQRSTUVWYXZ abcdefghijklmnopqrstuvwyxz</string>

    -- outros
    <string name="app_name">Travelling Packages</string>
    <string name="conteudo_do_banner">initial banner</string>
    <string name="resumo_data_retorno">\" to \"</string>
    <string name="resumo_descricao_imagem">Imagem of description of the package</string>
    <string name="realizar_pagamento">Pay</string>

    -- confirmacao pagamento
    <string name="confirmacaoPagamento_banner_texto_secundario">Congratulations!</string>
    <string name="confirmacaoPagamento_banner_texto_principal">Succeed operations</string>
    <string name="confirmacaoPagamento_titulo_app">RESUME</string>
    <string name="confirmacaoPagamento_banner_img_descricao">app banner</string>
    <string name="confirmacaoPagamento_resumoPedido">Order resume:</string>

</resources>