<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_pagamento_finalizar_compra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/botao_resumo_pagar"
            android:text="@string/pagamento_finalizar_botao"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_pagamento_cartao_nome"
            app:layout_constraintStart_toStartOf="@+id/et_pagamento_cartao_nome"
            app:layout_constraintTop_toBottomOf="@+id/et_pagamento_cartao_nome"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_pagamento_titulo_preco"
            android:layout_width="117dp"
            android:layout_height="23dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pagamento_title_valor_pagamento"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pagamento_descricao" />

        <EditText
            android:id="@+id/et_pagamento_cartao_cvc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="creditCardSecurityCode"
            android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
            android:hint="@string/pagamento_cod"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_pagamento_cartao_ano"
            app:layout_constraintEnd_toEndOf="@+id/et_pagamento_cartao_numero"
            tools:ignore="TextContrastCheck" />


        <EditText
            android:id="@+id/et_pagamento_cartao_ano"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:autofillHints="creditCardExpirationYear"
            android:hint="@string/pagamento_ano"
            android:inputType="number"
            android:maxLength="2"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_pagamento_cartao_mes"
            app:layout_constraintStart_toEndOf="@+id/et_pagamento_cartao_mes"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_pagamento_cartao_mes"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="creditCardExpirationMonth"
            android:hint="@string/pagamento_mes"
            android:inputType="number"
            android:maxLength="2"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/et_pagamento_cartao_numero"
            app:layout_constraintTop_toBottomOf="@+id/et_pagamento_cartao_numero"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_pagamento_cartao_numero"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:maxLength="11"
            android:hint="@string/pagamento_numero_cartao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pagamento_preco"
            tools:ignore="TextContrastCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_pagamento_cartao_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:digits="@string/pagamento_digitos_nome"
            android:hint="@string/pagamento_nome"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/et_pagamento_cartao_numero"
            app:layout_constraintStart_toStartOf="@+id/et_pagamento_cartao_mes"
            app:layout_constraintTop_toBottomOf="@+id/et_pagamento_cartao_ano"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_pagamento_descricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/pagamento_descricao"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pagamento_preco"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:text="@sample/pacote.json/preco"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/tv_pagamento_titulo_preco"
            app:layout_constraintTop_toBottomOf="@+id/tv_pagamento_titulo_preco" />
</androidx.constraintlayout.widget.ConstraintLayout>