<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_confirmacaoPagamento_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="76dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20sp">

        <ImageView
            android:id="@+id/iv_confirmacaoPagemento_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/botao_resumo_pagar"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/confirmacaoPagamento_banner_img_descricao">
        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_confirmacaoPagamento_banner_texto_principal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmacaoPagamento_banner_texto_principal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                tools:ignore="TextContrastCheck"
                tools:text="@string/pagamento_finalizar_botao" />

            <TextView
                android:id="@+id/tv_confirmacaoPagamento_banner_texto_secundario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/confirmacaoPagamento_banner_texto_secundario"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_confirmacaoPagamento_banner_texto_principal"
                tools:ignore="TextContrastCheck"
                tools:text="@string/app_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_confirmacaoPagamento_banner_texto_terciario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:text="@string/confirmacaoPagamento_resumoPedido"
        android:text="@string/confirmacaoPagamento_resumoPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_confirmacaoPagamento_banner2"
        app:layout_constraintTop_toBottomOf="@+id/cv_confirmacaoPagamento_banner" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_confirmacaoPagamento_banner2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmacaoPagamento_banner_texto_terciario"
        app:cardCornerRadius="20sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cl_banner2">

            <ImageView
                android:id="@+id/iv_confirmacaoPagamento_imagem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/cl_banner2"
                app:layout_constraintEnd_toEndOf="@+id/cl_banner2"
                app:layout_constraintStart_toStartOf="@+id/cl_banner2"
                app:layout_constraintTop_toTopOf="@+id/cl_banner2"
                app:srcCompat="@drawable/belo_horizonte" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>